update handle fun

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div class="progress-bar">
             <div class="progress" id="progress"></div>
         </div>
+        <div class="question-count">
+            Question <span id="current-question">1</span> of <span id="total-questions">10</span>
+        </div>
         <div class="keyboard-hint">
             <p>Tip: Use 'Y' for Yes and 'N' for No on your keyboard!</p>
         </div>
